# UAV

./: Dockerfile.gateway  ENHANCED_SYSTEM_README.md  LICENSE  Makefile  README.md  REFACTORING_PROGRESS.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION_SUMMARY.md  build.ps1  docker-compose.yml  requirements.txt  run_enhanced_demonstration.py
.kiro/specs/security-hardening-and-inference-optimization/: design.md  requirements.md  tasks.md
UAV_Controller/: README.md  UAV_Controller.sln
UAV_Controller/MauiApp1/: App.xaml.cs  CameraType.cs  DJIFlyControllerManager.cs  DJILocation.cs  DJITelemetry.cs  MainPage.xaml  MainViewModel.cs  MauiApp1.csproj  UAVInspectionManager.cs  UAVServiceClient.cs
UAV_Controller/MauiApp1/Protobuf/: services.proto
UAV_Controller/UAV_Controller/: MainActivity.cs  UAV_Controller.csproj
UAV_Controller/UAV_Controller/Resources/values/: strings.xml
UAV_server/: Cargo.toml  README.md  build.rs
UAV_server/src/: Dockerfile  compose_images.rs  criticality_assessor_service.rs  defect_expert_params.rs  defects_material.xml  detection_service.rs  docker-compose.yml  expert_data.json  main.rs  trajectory_service.rs
UAV_server/src/protofbufs/: common.proto  criticality.proto  defect_detection.proto
VISION_Fuzzy/: README.md  WindTurbineDefectCriticality.fis  comprehensive_test_suite.py  enhanced_fis_core.py  fis_core.py  integration_bridge.py  main.tex  process_defects.py  requirements_enhanced.txt  secure_integration_bridge.py  supply.tex  validation_framework.py
VISION_Recognition/: CMakeLists.txt  DetectronHandler.cpp  ImageProcessor.cpp  README.md  ResultAnalyzer.h  detectron_handler.h  enhanced_CMakeLists.txt  enhanced_image_processor.cpp  enhanced_image_processor.h  enhanced_main.cpp  image_processor.h  main.cpp  model_ensemble.cpp  model_ensemble.h  result_analyzer.cpp  secure_enhanced_main.cpp  yolo_ensemble_detector.h
VISION_Recognition/config/: default_config.json
img/: figure1.md
protos/: reporting.proto  services.proto  trajectory.proto
security/: audit_logger.py  authentication_manager.py  cryptographic_manager.py  input_validator.py  secure_data_manager.py  secure_subprocess_manager.cpp  secure_subprocess_manager.h  security_monitor.py
services/gateway/: Cargo.toml
services/gateway/src/: config.rs  main.rs
services/gateway/src/handlers/: health.rs  mod.rs
services/gateway/src/middleware/: mod.rs
services/gateway/src/services/: gateway.rs  mod.rs
services/gateway/src/workflow/: mod.rs  state.rs
shared/proto/: common.proto  criticality.proto  defect_detection.proto  gateway.proto  reporting.proto  trajectory.proto
shared/rust-common/: Cargo.toml  README.md  build.rs
shared/rust-common/src/: config.rs  error.rs  lib.rs  logging.rs  metrics.rs  types.rs  utils.rs  validation.rs
shared/rust-common/src/proto/: mod.rs
