[package]
name = "UAV_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.13.0"
rand = "0.9.1"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
kube = { version = "0.89.0", features = ["derive", "runtime", "client"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json"] }
opencv = { version = "0.91.3", features = ["opencv-4"] }
prost = "0.12.6"
prost-types = "0.12.6"
futures = "0.3.30"
tokio-stream = "0.1.15"
