[package]
name = "UAV_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
rand = "0.8.5"
anyhow = "1.0.79"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
kube = { version = "0.88.1", features = ["derive", "runtime", "client"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json"] }
opencv = { version = "0.88.8", features = ["opencv-4"] }
prost = "0.12.3"
prost-types = "0.12.3"
futures = "0.3.30"
tokio-stream = "0.1.15"

[build-dependencies]
tonic-build = "0.11.0"
