[package]
name = "uav-gateway"
version = "0.1.0"
edition = "2021"
description = "UAV Gateway Service - orchestrates the inspection workflow"

[dependencies]
# Local dependencies
uav-common = { path = "../../shared/rust-common", features = ["database", "kubernetes"] }

# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# gRPC
tonic = "0.11"
tonic-reflection = "0.11"
tonic-health = "0.11"

# Async
futures = "0.3"
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP server for health checks and metrics
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Configuration
clap = { version = "4.0", features = ["derive", "env"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }

# Metrics
prometheus = "0.13"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.11"