[package]
name = "uav-common"
version = "0.1.0"
edition = "2021"
description = "Shared utilities and types for UAV inspection system"
license = "MIT"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# gRPC and protobuf
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tracing-opentelemetry = "0.21"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }

# Configuration
config = "0.14"
envy = "0.4"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Metrics
prometheus = "0.13"

# Database (optional)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }

# Kubernetes client
kube = { version = "0.88", features = ["derive", "runtime", "client"], optional = true }

[build-dependencies]
tonic-build = "0.11"

[features]
default = []
database = ["sqlx"]
kubernetes = ["kube"]